# Web-Scrapping

./: 1.1 webScrappingBasic.ipynb  1.1-webScrapping.ipynb  pyproject.toml  requirements.txt
