[tool.poetry]
name = "web scrapping"
version = "1.1"
description = "How to extract data from website?"
authors = ["Muhammad Awais"]
license = "MA-1.1"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
